--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,60 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.navLinks::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: #fff;
+    border-radius: 5px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 0.5s;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.navLinks:hover::after {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.navLinks {
+    @apply relative text-[1.1em] text-white no-underline font-medium ml-5 sm:ml-10;
+}
+
+.form-div {
+    @apply relative w-full h-[50px] border-b-2 border-primary my-[30px];
+}
+
+.form-input {
+    @apply w-full h-full bg-transparent border-none outline-none text-base text-primary font-semibold pr-9 pl-[5px];
+}
+
+.form-div input:focus ~ label,
+.form-div input:valid ~ label {
+    @apply -top-[5px];
+}
+
+.input-icon {
+    @apply absolute right-2 top-3 text-[1.2rem] text-primary;
+}
+
+.icon-close {
+    @apply absolute top-0 right-0 h-11 w-11 bg-primary text-3xl text-white flex justify-center items-center rounded-bl-[20px];
+}
+
+.input-label {
+    @apply absolute top-1/2 left-[5px] transform -translate-y-1/2 text-base text-primary font-medium pointer-events-none duration-500;
+}
+
+.submit-btn {
+    @apply w-full h-11 bg-primary outline-none rounded-md cursor-pointer text-white font-medium focus:border-2 hover:border-white hover:border-2 duration-150;
 }
